methods.basics.Methods.scala.code
def goAndGet() {
  forward()
  if(overBaggle()){
    pickupBaggle()
  }
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}